infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: homelab

spec:
  gatewayClassName: cilium

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

    - name: https
      hostname: "*.home.example.com"
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate

        certificateRefs:
          - kind: Secret
            name: home-wildcard-tls

      allowedRoutes:
        namespaces:
          from: All
